feat: 2026-08-29 生产FQC质检放行入库、补产闭环与财务账户流水治理全量提交
- 生产报工FQC质量放行与成品入库迁移(V410-V415、V418),下线旧版成品入库与生产BOM策略(V423)
- FQC不合格补产物料闭环与生产/仓储待办看板
- 物料分析公共安全库存分账与计划前需求拆分(V420、V422)
- 财务追加式账户流水、多币种收款毛额折额、支付幂等与迁移异常队列(V407-V408、V416-V417、V421)
- 商业价格与库存成本可见性治理(CommercialPriceVisibility、StockCostMasker)
- 采购质检批量放行工作台与到货登记幂等(V419)
- 文档:ADR-053~057、组件库与页面文档同步更新